syntax = "proto3";

package auth;

option go_package = "pkg/proto";

service Auth {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc UpdateTokens(UpdateTokensRequest) returns (UpdateTokensResponse);
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message RegisterResponse {
    string user_id = 1;  
    string email = 2;      
    string username = 3; 
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message UpdateTokensRequest {
    string refresh_token = 1;
}

message UpdateTokensResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message VerifyTokenRequest {
    string access_token = 1;
}

message VerifyTokenResponse {
    string user_id = 1;  
    string email = 2;      
    string username = 3;       
}
